--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "redux-devtools": "*",
     "sinon": "*",
     "vinyl-source-stream": "*",
-    "watchify": "*"
+    "watchify": "^3.9.0"
   },
   "dependencies": {
     "babel-cli": "^6.24.0",
