--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babelify": "^7.3.0",
+    "dotenv": "^4.0.0",
     "ejs": "*",
     "eslint": "*",
     "express": "*",
