add resto and recipes and created popup info

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-addons-test-utils": "*",
     "react-addons-update": "*",
     "react-dom": "*",
+    "react-popup": "^0.8.0",
     "react-redux": "*",
     "reactify": "*",
     "redux": "*",
